# clipped-bounding-boxes

./: LICENSE  README.md
DataGenerator/: README.md  ReadMe.txt  readdata.c
DataGenerator/distNEW/: .gitignore  2Dar2dr.c  2Ddr2ar.c  CDabs.c.NEW  CDabs.c.ORIG  CDbit.c  CDbit.c.NEW  CDdia.c  CDdia.c.NEW  CDpar.c.1B  CDpar.c.NEW  CDpar.c.ORIG  CDped.c.NEW  CDped.c.ORIG  CDpha.c  CDpha.c.NEW  CDuni.c.NEW  CDuni.c.ORIG  DIFF_NEW_ORIG  LICENSE  MDapr.c  MDmpr.c  MDrpr.c  MDsuc.c  MakeArtiS  MakeHBP  MakeReal  Make_abs  Make_ped  Make_pha  Makefile  README  README.Version  README.md  README.readData.c.txt  ap2dr.c  ckrctcns.c  createall  mv0pad  mv0pad-h  (+9 more)
DataGenerator/distNEW/rrst/: .gitignore  Makefile  RSTBase.h  RSTInstDel.c  RSTInterUtil20.h  RSTOtherFuncs.h  RSTTypes.h  RSTt.c  RSTtBin.c  RSTtTxt.c
DataGenerator/distNEW/rtcom/: RSTDistHeap.c  RSTDistHeap.h  RSTDistQueryBase.h  RSTInstDel.h  RSTInterUtil.c  RSTJoin.c  RSTLRUPageIO.h  RSTQuery.c  RSTQueryFuncType.h  RSTRAMPageIO.c  RSTRAMPageIO.h
DataGenerator/tools/: .gitignore  3d  Makefile  README  README.Version
DeadSpace/: CMakeLists.txt  LICENSE  QuickStart.md  README.md
DeadSpace/apps/: cbb.cc  cgalConvexHull.cc  rs2txt.cc  rs2vtk.cc  txt2rs.cc  visTree.cc
DeadSpace/asci_dumps/: .gitignore  README.md
DeadSpace/asci_dumps/queries/: .gitignore  query2_axo03_25697.rs  query2_axo03_25697.vtk
DeadSpace/googletest-v1.7.0/: .gitignore
DeadSpace/include/: ASCIDumpParser.h  Color.h  NodeVisualizer.h  SSkyline.h  SpatialObjects.h  Stats.h  Utils.h  VTKDataFile.h  VisUtils.h
DeadSpace/scripts/: .gitignore  computeCBB4Motivation.sh  genHBP.sh  genTestDumps.sh  runBrinkhoff.sh  runDeadSpace.sh
DeadSpace/src/: ASCIDumpParser.cc  NodeVisualizer.cc  SSkyline.cc  Stats.cc  Utils.cc  VisUtils.cc
DeadSpace/src/tests/: DeadSpace_unittest.cc
DeadSpace/tests/: .gitignore  README.md  RRSTree_test_data.RSF.ASC  axo03_empty_queries  ori_infile  test_data  test_data.RSF.ASC  test_data.rs  test_data_3d  test_data_3d.RSF.ASC  test_data_3d.rs  test_data_3d_queries  test_data_3d_queries.rs  test_data_queries  test_data_queries.rs
DeadSpace/tests/test_data_3d_queries_vtk/: all_in_one.vtk  query.vtk  query_0.vtk  query_1.vtk  query_2.vtk  query_3.vtk  query_4.vtk  query_5.vtk  query_6.vtk  query_7.vtk  query_8.vtk  query_9.vtk
DeadSpace/tests/test_data_3d_vtk/: test_data_3d_0.vtk  test_data_3d_1.vtk  test_data_3d_2.vtk  test_data_3d_3.vtk  test_data_3d_4.vtk  test_data_3d_5.vtk  test_data_3d_6.vtk  test_data_3d_all_filled.vtk
DeadSpace/tests/test_data_queries_vtk/: test_data_queries_0.vtk  test_data_queries_1.vtk  test_data_queries_2.vtk  test_data_queries_3.vtk  test_data_queries_4.vtk  test_data_queries_5.vtk  test_data_queries_6.vtk  test_data_queries_7.vtk  test_data_queries_8.vtk  test_data_queries_9.vtk  test_data_queries_all.vtk
DeadSpace/tests/test_data_vtk/: test_data_0.vtk  test_data_1.vtk  test_data_2.vtk  test_data_3.vtk  test_data_4.vtk  test_data_5.vtk  test_data_6.vtk  test_data_all.vtk  test_data_all_filled.vtk
L-tree/: LICENSE  Makefile  README  README.Platform  README.QuickReference  README.RSTt.c.txt  README.Version  getheads
L-tree/scripts/: .gitignore  cmp.py  ex_infile  genRSTinputfile.sh  genRSTinputfileQuerying.sh  genTreeDumps.sh  genTreeDumps4Motivation.sh  getASCIDump.sh  runExperiments.sh  runScaQueries.sh  testCTree-vs-DeadSpace.sh  testRangeCountQueries.sh
L-tree/test_data/: .gitignore  infile_rea02  test_data.txt  test_data.vtk  test_data_infile
L-tree/vis/: .gitignore  visTextFile.sh
(+176 files in other folders)
